# SimpleGeminiAI

./: README.md  main.py  pyproject.toml
